@@ -425,6 +425,36 @@ class HandlerTestCase(LogbookTestCase):
         finally:
             handler.pop_thread()
 
+    def test_mail_handler_batching(self):
+        from logbook.more import FingersCrossedHandler
+        mail_handler = make_fake_mail_handler()
+        handler = FingersCrossedHandler(mail_handler, reset=True)
+        handler.push_thread()
+        try:
+            self.log.warn('Testing')
+            self.log.debug('Even more')
+            self.log.error('And this triggers it')
+        finally:
+            handler.pop_thread()
+
+        self.assertEqual(len(mail_handler.mails), 1)
+        mail = mail_handler.mails[0][2]
+
+        pieces = mail.split('Log records that led up to this one:')
+        self.assertEqual(len(pieces), 2)
+        body, rest = pieces
+
+        self.assert_(re.search('Message type:\s+ERROR', body))
+        self.assert_(re.search('Module:\s+logbook.testsuite.test_regular',
+                     body))
+        self.assert_(re.search('Function:\s+test_mail_handler_batching',
+                     body))
+
+        related = rest.strip().split('\r\n\r\n')
+        self.assertEqual(len(related), 2)
+        self.assert_(re.search('Message type:\s+WARNING', related[0]))
+        self.assert_(re.search('Message type:\s+DEBUG', related[1]))
+
     def test_syslog_handler(self):
         to_test = [
             (socket.AF_INET, ('127.0.0.1', 0)),
